# LemonBox

./: .gitignore  README.md  build.gradle  main.py  package-lock.json  pyproject.toml
frontLemon/src/: main.ts  propertiesMenu.ts
frontLemon/src/lib/: MotorProperties.svelte  Motors.svelte  Tabs.svelte  index.ts
frontLemon/src/routes/: +homePage.svelte
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/public/: index.html
frontend/src/: App.svelte  MotorProperties.svelte  app.css  index.html  index.ts  main.ts  motorPropertiesMenu.html  motorPropertiesMenu.ts  motorTileMenu.html  motorTileMenu.ts
frontend/src/components/: MotorTile.svelte  motor.ts  tab.ts
frontend/src/lib/: ActionWarning.svelte  Chart.svelte  FaultMessage.svelte  MotorProperties.svelte  MotorTile.svelte  Motors.svelte  Tab.svelte  TabContaining.svelte  TabsBar.svelte  TestMotor.svelte  Warning.svelte  driverStation.ts  motor.svelte.ts  motor.ts  tabData.ts  tabdata.svelte.ts  tabdata.ts
frontend/src/style/: index.css
services/: README.md  chromiumKiosk.service  lemon.service
services/usb-connection/: 98-rio.rules  README.md  roborio.nmconnection
src/main/java/: Main.java  Motor.java  MotorManager.java  OpendsManager.java
static/: index.html  index.js
static/style/: style.css
